--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -9,6 +9,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 /* STYLES */
+@import url('./assets/css/effects.scss');
 @import url('./assets/css/generics.css');
 @import url('./assets/css/home.css');
 
