productInfo + fix starRating

--- a/frontend/src/app/components/graphics/navbar/navbar.component.html
+++ b/frontend/src/app/components/graphics/navbar/navbar.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-md-auto gap-2">
         <li class="nav-item rounded">
-          <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-house-fill me-2"></i>Inicio</a>
+          <a class="nav-link active" aria-current="page" routerLink="/"><i class="bi bi-house-fill me-2"></i>Inicio</a>
         </li>
         <li class="nav-item rounded">
-          <a class="nav-link" href="#"><i class="bi bi-people-fill me-2"></i>Mercado</a>
+          <a class="nav-link" routerLink="/marketplace"><i class="bi bi-people-fill me-2"></i>Mercado</a>
         </li>
         <li class="nav-item rounded">
           <a class="nav-link" href="#"><i class="bi bi-telephone-fill me-2"></i>Ayuda</a>
@@ -24,7 +24,7 @@
             aria-expanded="false"><i style="font-size: 20px;" class="fa fa-user-circle-o"></i></a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Cuenta</a></li>
-            <li><a class="dropdown-item" href="#">Mis Productos</a></li>
+            <li><a class="dropdown-item" routerLink="/my-products">Mis Productos</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
