--- a/frontend/src/app/components/views/public/productInfo/productInfo.component.html
+++ b/frontend/src/app/components/views/public/productInfo/productInfo.component.html
@@ -1,37 +1,59 @@
-<div>
-  <carrouselComponent></carrouselComponent>
-
-  <p>Filtra por categorias: TODO</p>
-  <h1>Products</h1>
-
-  <!-- <button class="addButton" [routerLink]="['/addproduct']">+</button> -->
- 
-  <div class="generalDiv">
-    <div class="divContentBox">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4" *ngFor="let product of products">
-            <div class="thumb-wrapper">
-              <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
-              <div class="img-box"> 
-                <img src={{(product.image)}} height="172" width="306" onerror="this.onerror=null; this.src='https://drive.google.com/uc?export=view&id=1EGB1gi7VWxWTnBVqk09nTmlrIfuTJiSF'" >
-              </div>
-              <div class="thumb-content">
-                <h4>{{product.title}}</h4>
-                <starRatingComponent [stars]="product.stars"></starRatingComponent>
-                <p class="item-price"><a>{{product.price}}€</a></p>
-                <a href="#" class="btn btn-primary">Add to Cart</a>
-              </div>						
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-    
+	
+	<div class="container">
+		<div class="card">
+			<div class="container-fliud">
+				<div class="wrapper row">
+					<div class="preview col-md-6">
+						
+						<div class="preview-pic tab-content">
+						  <div class="tab-pane active" id="pic-1"> <img src={{(product.image)}} onerror="this.onerror=null; this.src='https://drive.google.com/uc?export=view&id=1EGB1gi7VWxWTnBVqk09nTmlrIfuTJiSF'" ></div>
+						  <div class="tab-pane" id="pic-2"><img src="http://placekitten.com/400/252" /></div>
+						  <div class="tab-pane" id="pic-3"><img src="http://placekitten.com/400/252" /></div>
+						  <div class="tab-pane" id="pic-4"><img src="http://placekitten.com/400/252" /></div>
+						  <div class="tab-pane" id="pic-5"><img src="http://placekitten.com/400/252" /></div>
+						</div>
+						<ul class="preview-thumbnail nav nav-tabs">
+						  <li class="active"><a data-target="#pic-1" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
+						  <li><a data-target="#pic-2" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
+						  <li><a data-target="#pic-3" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
+						  <li><a data-target="#pic-4" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
+						  <li><a data-target="#pic-5" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
+						</ul>
+						
+					</div>
+					<div class="details col-md-6">
+						<h3 class="product-title">{{product.title}}</h3>
+						<div class="rating">
+							<div class="stars">
+                <starRatingComponent [stars]="this.product.stars"></starRatingComponent>
+								<!-- <span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star"></span>
+								<span class="fa fa-star"></span> -->
+							</div>
+							<span class="review-no">41 reviews</span>
+						</div>
+						<p class="product-description">{{product.description}}</p>
+						<h4 class="price">Precio: <span>{{product.price}}€</span></h4>
+						<p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p>
+						<h5 class="sizes">sizes:
+							<span class="size" data-toggle="tooltip" title="small">s</span>
+							<span class="size" data-toggle="tooltip" title="medium">m</span>
+							<span class="size" data-toggle="tooltip" title="large">l</span>
+							<span class="size" data-toggle="tooltip" title="xtra large">xl</span>
+						</h5>
+						<h5 class="colors">colors:
+							<span class="color orange not-available" data-toggle="tooltip" title="Not In store"></span>
+							<span class="color green"></span>
+							<span class="color blue"></span>
+						</h5>
+						<div class="action">
+							<button class="add-to-cart btn btn-default" type="button">add to cart</button>
+							<button class="like btn btn-default" type="button"><span class="fa fa-heart"></span></button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
