pagina carrito (no funcional)

--- a/frontend/src/app/components/graphics/navbar/navbar.component.html
+++ b/frontend/src/app/components/graphics/navbar/navbar.component.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="#"><i class="bi bi-telephone-fill me-2"></i>Ayuda</a>
         </li>
         <li class="nav-item rounded">
-          <a class="nav-link" href="#"><i style="font-size: 20px;" class="fa fa-shopping-cart"></i></a>
+          <a class="nav-link" routerLink="/cart"><i style="font-size: 20px;" class="fa fa-shopping-cart"></i></a>
         </li>
         <li class="nav-item dropdown rounded">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -25,6 +25,7 @@
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Cuenta</a></li>
             <li><a class="dropdown-item" routerLink="/my-products">Mis Productos</a></li>
+            <li><a class="dropdown-item" routerLink="/create-product">Añadir Producto</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
