--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,6 +3,7 @@
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
 
+@import '~mdb-ui-kit/css/mdb.min.css';
 
 /* FONTS  */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
