--- a/frontend/src/app/components/graphics/navbar/navbar.component.html
+++ b/frontend/src/app/components/graphics/navbar/navbar.component.html
@@ -17,8 +17,11 @@
           <a class="nav-link" href="#"><i class="bi bi-telephone-fill me-2"></i>Ayuda</a>
         </li>
         <li class="nav-item rounded">
-          <a class="nav-link" routerLink="/cart"><i style="font-size: 20px;" class="fa fa-shopping-cart"></i></a>
-        </li>
+          <a class="nav-link" routerLink="/cart">
+            <i style="font-size: 20px;" class="fa fa-shopping-cart"></i>
+            <span class="cart-count">0</span>
+          </a>
+        </li>        
         <li class="nav-item dropdown rounded">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false"><i style="font-size: 20px;" class="fa fa-user-circle-o"></i></a>
