--- a/frontend/src/app/components/graphics/navbar/navbar.component.html
+++ b/frontend/src/app/components/graphics/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         <li class="nav-item rounded">
           <a class="nav-link" routerLink="/cart">
             <i style="font-size: 20px;" class="fa fa-shopping-cart"></i>
-            <span class="cart-count">0</span>
+            <span class="cart-count">{{this.cantidadProductos}}</span>
           </a>
         </li>        
         <li class="nav-item dropdown rounded">
