cart in localstorage + fix red circle navbar

--- a/frontend/src/app/components/views/public/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/views/public/marketplace/marketplace.component.html
@@ -20,7 +20,7 @@
                 <h4 routerLink="/product-details/{{product.uid}}">{{product.title}}</h4>
                 <starRatingComponent [stars]="product.stars" routerLink="/product-details/{{product.uid}}"></starRatingComponent>
                 <p class="item-price" routerLink="/product-details/{{product.uid}}"><a>{{product.price}}€</a></p>
-                <a (click)="addCarrito(product.uid)" class="btn btn-primary">Add to Cart</a>
+                <a (click)="addCarrito(product)" class="btn btn-primary">Add to Cart</a>
               </div>						
             </div>
           </div>
