--- a/frontend/src/app/components/views/public/cart/cart.component.html
+++ b/frontend/src/app/components/views/public/cart/cart.component.html
@@ -1,4 +1,4 @@
-<section class="h-100 h-custom" style="background-color: #d2c9ff;">
+<section class="h-100 h-custom" style="background-color: #e3ffc986;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12">
@@ -22,15 +22,17 @@
                     </div>
                     <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                       <button class="btn btn-link px-2"
-                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                        (click)="this.resUnits(product.uid)">
                         <i class="fas fa-minus"></i>
                       </button>
 
-                      <input id="form1" min="0" name="quantity" value="1" type="number"
-                        class="form-control form-control-sm" />
+                      <p id="product{{product.uid}}">{{product.units}}</p>
+
+                      <!-- <input id="form1" min="0" name="quantity" value="1" type="number"
+                        class="form-control form-control-sm" /> -->
 
                       <button class="btn btn-link px-2"
-                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                        (click)="this.sumUnits(product.uid)">
                         <i class="fas fa-plus"></i>
                       </button>
                     </div>
@@ -83,7 +85,7 @@
                   </div>
 
                   <button type="button" class="btn btn-dark btn-block btn-lg"
-                    data-mdb-ripple-color="dark">Register</button>
+                    data-mdb-ripple-color="dark" (click)="pagar()">Pagar</button>
 
                 </div>
               </div>
