fix cart al bajar cantidad units a 0

--- a/frontend/src/app/components/views/public/cart/cart.component.html
+++ b/frontend/src/app/components/views/public/cart/cart.component.html
@@ -37,7 +37,7 @@
                       </button>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">{{product.price}}€</h6>
+                      <h6 class="mb-0">{{product.price * product.units}}€</h6>
                     </div>
                     <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                       <a style="cursor: pointer;" (click)="removeProductCart(product.uid)" class="text-muted"><i class="fas fa-times"></i></a>
