--- a/frontend/src/app/components/views/public/cart/cart.component.html
+++ b/frontend/src/app/components/views/public/cart/cart.component.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                       <button class="btn btn-link px-2"
-                        (click)="this.resUnits(product.uid)">
+                        (click)="this.resUnits(product.uid, product.price)">
                         <i class="fas fa-minus"></i>
                       </button>
 
@@ -32,12 +32,12 @@
                         class="form-control form-control-sm" /> -->
 
                       <button class="btn btn-link px-2"
-                        (click)="this.sumUnits(product.uid)">
+                        (click)="this.sumUnits(product.uid, product.price)">
                         <i class="fas fa-plus"></i>
                       </button>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">{{product.price * product.units}}€</h6>
+                      <h6 id="productPriceUnit{{product.uid}}" class="mb-0">{{product.price * product.units}}</h6>
                     </div>
                     <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                       <a style="cursor: pointer;" (click)="removeProductCart(product.uid)" class="text-muted"><i class="fas fa-times"></i></a>
@@ -81,7 +81,7 @@
 
                   <div class="d-flex justify-content-between mb-5">
                     <h5 class="text-uppercase">Precio Total</h5>
-                    <h5>€ 137.00</h5>
+                    <h5>{{totalPrice}}€</h5>
                   </div>
 
                   <button type="button" class="btn btn-dark btn-block btn-lg"
