--- a/frontend/src/app/components/views/public/cart/cart.component.html
+++ b/frontend/src/app/components/views/public/cart/cart.component.html
@@ -37,7 +37,8 @@
                       </button>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 id="productPriceUnit{{product.uid}}" class="mb-0">{{product.price * product.units}}</h6>
+                      <h6 class="mb-0">{{product.price.toFixed(2)}}€</h6>
+                      <!-- <h6 id="productPriceUnit{{product.uid}}" class="mb-0">{{product.price * product.units}}</h6> -->
                     </div>
                     <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                       <a style="cursor: pointer;" (click)="removeProductCart(product.uid)" class="text-muted"><i class="fas fa-times"></i></a>
@@ -60,12 +61,12 @@
                   <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
                   <hr class="my-4">
 
-                  <div class="d-flex justify-content-between mb-4">
-                    <h5 class="text-uppercase">items 3</h5>
-                    <h5>€ 132.00</h5>
+                  <div *ngFor="let product of products" class="d-flex justify-content-between mb-4">
+                    <h5 class="text-uppercase">{{this.utilsService.maxShowText(product.title, 20)}}</h5>
+                    <h5><span id="productPriceUnit{{product.uid}}" class="mb-0">{{(product.price * product.units).toFixed(2)}}</span>€</h5>
                   </div>
 
-                  <h5 class="text-uppercase mb-3">Shipping</h5>
+                  <!-- <h5 class="text-uppercase mb-3">Shipping</h5>
 
                   <div class="mb-4 pb-2">
                     <select class="select">
@@ -74,14 +75,14 @@
                       <option value="3">Three</option>
                       <option value="4">Four</option>
                     </select>
-                  </div>
+                  </div> -->
 
 
                   <hr class="my-4">
 
                   <div class="d-flex justify-content-between mb-5">
                     <h5 class="text-uppercase">Precio Total</h5>
-                    <h5>{{totalPrice}}€</h5>
+                    <h5>{{totalPrice.toFixed(2)}}€</h5>
                   </div>
 
                   <button type="button" class="btn btn-dark btn-block btn-lg"
