stock se resta al comprar

--- a/frontend/src/app/components/views/public/cart/cart.component.html
+++ b/frontend/src/app/components/views/public/cart/cart.component.html
@@ -85,8 +85,8 @@
                     <h5>{{totalPrice.toFixed(2)}}€</h5>
                   </div>
 
-                  <button type="button" class="btn btn-dark btn-block btn-lg"
-                    data-mdb-ripple-color="dark" (click)="pagar()">Pagar</button>
+                  <button type="button" class="btn btn-dark btn-block btn-lg" type="submit"
+                    data-mdb-ripple-color="dark" (click)="payProducts()">Check Out</button>
 
                 </div>
               </div>
