purchaseDate en sales

--- a/frontend/src/app/components/views/public/register/register.component.html
+++ b/frontend/src/app/components/views/public/register/register.component.html
@@ -39,7 +39,7 @@
           <div class="invalid-feedback">Obligatiorio</div>
         </div>
         <div class="col-sm-6 mb-4">
-          <label for="years" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Edad</label>
+          <label for="years" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Fecha nacimiento</label>
           <input formControlName="years" [(ngModel)]="this.register.years" (ngModelChange)="checkYears($event)" type="date" id="years" name="password2" class="form-control form-control-lg" required=""maxlength="100">
           <div class="invalid-feedback">Required / Error Format!</div>
         </div>
