--- a/frontend/src/app/components/graphics/starRating/starRating.component.html
+++ b/frontend/src/app/components/graphics/starRating/starRating.component.html
@@ -9,12 +9,13 @@
     </ul>
     <ul class="list-inline" *ngIf="intStars===1">
       <li class="list-inline-item"><i class="fa fa-star"></i></li>
-      <li class="list-inline-item"><i class="fa fa-star-o"></i></li> 
+      <li class="list-inline-item"><i class="fa fa-star-o" aria-hidden="true"></i></li> 
       <li class="list-inline-item"><i class="fa fa-star-o"></i></li> 
       <li class="list-inline-item"><i class="fa fa-star-o"></i></li> 
       <li class="list-inline-item"><i class="fa fa-star-o"></i></li> 
     </ul>
     <ul class="list-inline" *ngIf="intStars===2">
+      aaaaaaa
       <li class="list-inline-item"><i class="fa fa-star"></i></li>
       <li class="list-inline-item"><i class="fa fa-star"></i></li>
       <li class="list-inline-item"><i class="fa fa-star-o"></i></li> 
