creation of dashboard + 2 params in salesModel

--- a/frontend/src/app/components/graphics/navbar/navbar.component.html
+++ b/frontend/src/app/components/graphics/navbar/navbar.component.html
@@ -26,7 +26,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false"><i style="font-size: 20px;" class="fa fa-user-circle-o"></i></a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Cuenta</a></li>
+            <li><a class="dropdown-item" routerLink="/dashboard">Cuenta</a></li>
             <li><a class="dropdown-item" routerLink="/my-products">Mis Productos</a></li>
             <li><a class="dropdown-item" routerLink="/create-product">Añadir Producto</a></li>
             <li>
