--- a/frontend/src/app/components/views/private/userProfile/userProfile.component.html
+++ b/frontend/src/app/components/views/private/userProfile/userProfile.component.html
@@ -39,7 +39,7 @@
 
   <section class="panel important">
     <h2>Stock</h2>
-    
+    <barChartComponent [data]="this.data.stockGraphData"></barChartComponent>
   </section>
   <!-- <section class="panel important">
     <h2>Write a post</h2>
