--- a/frontend/src/app/components/views/private/userProfile/userProfile.component.html
+++ b/frontend/src/app/components/views/private/userProfile/userProfile.component.html
@@ -88,35 +88,33 @@
     <h2>feedback</h2>
     <div class="feedback">This is neutral feedback Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, praesentium. Libero perspiciatis quis aliquid iste quam dignissimos, accusamus temporibus ullam voluptatum, tempora pariatur, similique molestias blanditiis at sunt earum neque.</div>
     <div class="feedback error">This is warning feedback
-<ul>
-  <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-  <li>Aliquam tincidunt mauris eu risus.</li>
-  <li>Vestibulum auctor dapibus neque.</li>
-</ul>  </div>
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+        <li>Aliquam tincidunt mauris eu risus.</li>
+        <li>Vestibulum auctor dapibus neque.</li>
+      </ul>  
+    </div>
     <div class="feedback success">This is positive feedback</div>
 
   </section>
+
+
+
+
   <section class="panel ">
-    <h2>Table</h2>
+    <h2>Tus Productos</h2>
     <table>
       <tr>
-        <th>Username</th>
-        <th>Posts</th>
-        <th>comments</th>
-        <th>date</th>
+        <th>Nombre</th>
+        <th>Stock</th>
+        <th>Precio</th>
+        <th>Ventas</th>
       </tr>
-      <tr>
-        <td>Pete</td>
-        <td>4</td>
-        <td>7</td>
-        <td>Oct 10, 2015</td>
-
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>5769</td>
-        <td>2517</td>
-        <td>Jan 1, 2014</td>
+      <tr *ngFor="let producto of data.stockGraphData" routerLink="/product-details/{{data.bestSeller.uid}}">
+        <td>{{ producto.title }}</td>
+        <td>{{ producto.stock }}</td>
+        <td>{{ producto.price }}</td>
+        <td>{{ data.totalSalesPerProduct[producto.uid] || 0}}</td>
       </tr>
     </table>
   </section>
