--- a/frontend/src/app/components/views/private/userProducts/userProducts.component.html
+++ b/frontend/src/app/components/views/private/userProducts/userProducts.component.html
@@ -1,33 +1,47 @@
 <div>
-  <h1>Products</h1>
+  <dashboardNavbarComponent></dashboardNavbarComponent>
 
-  <!-- <button class="addButton" [routerLink]="['/addproduct']">+</button> -->
+  <main role="main">
 
-
-  <div class="generalDiv">
-    <div class="divContentBox">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4" *ngFor="let product of products">
-            <div class="thumb-wrapper">
-              <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
-              <div class="img-box">
-                <img src={{(product.image)}} class="img-fluid imgZoom" onerror="this.onerror=null; this.src='https://drive.google.com/uc?export=view&id=1EGB1gi7VWxWTnBVqk09nTmlrIfuTJiSF'" >
+    <h1>Products</h1>
+    <section class="panel important">
+  
+      <!-- <button class="addButton" [routerLink]="['/addproduct']">+</button> -->
+    
+    
+      <div class="generalDiv">
+        <div class="divContentBox">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4" *ngFor="let product of products">
+                <div class="thumb-wrapper">
+                  <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
+                  <div class="img-box">
+                    <img src={{(product.image)}} class="img-fluid imgZoom" onerror="this.onerror=null; this.src='https://drive.google.com/uc?export=view&id=1EGB1gi7VWxWTnBVqk09nTmlrIfuTJiSF'" >
+                  </div>
+                  <div class="thumb-content">
+                    <h4>{{product.title}}</h4>
+                    <starRatingComponent [stars]="product.stars"></starRatingComponent>
+                    <p class="item-price"><a>{{product.price}}€</a></p>
+                    <a href="#" class="btn btn-primary">+ Carrito</a>
+                    <a routerLink="/edit-product/{{ product.uid }}" class="btn btn-primary">Editar</a>
+                    <a (click)="deleteProduct(product.uid)" class="btn btn-primary">Eliminar</a>
+                  </div>						
+                </div>
               </div>
-              <div class="thumb-content">
-                <h4>{{product.title}}</h4>
-                <starRatingComponent [stars]="product.stars"></starRatingComponent>
-                <p class="item-price"><a>{{product.price}}€</a></p>
-                <a href="#" class="btn btn-primary">+ Carrito</a>
-                <a routerLink="/edit-product/{{ product.uid }}" class="btn btn-primary">Editar</a>
-                <a (click)="deleteProduct(product.uid)" class="btn btn-primary">Eliminar</a>
-              </div>						
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
+
+    </section>
+
+    
+
+ 
+
+  </main>
+
 
 <!-- 
   <li *ngFor="let post of posts">
