--- a/frontend/src/app/components/graphics/dashboardNavbar/dashboardNavbar.component.html
+++ b/frontend/src/app/components/graphics/dashboardNavbar/dashboardNavbar.component.html
@@ -1,8 +1,8 @@
 <nav role="navigation">
   <ul class="main">
-    <li class="dashboard"><a href="#">Dashboard</a></li>
-    <li class="edit"><a href="#">Mis Productos</a></li>
-    <li class="write"><a href="#">Añadir Producto</a></li>
+    <li class="dashboard"><a routerLink="/dashboard">Dashboard</a></li>
+    <li class="edit"><a routerLink="/my-products">Mis Productos</a></li>
+    <li class="write"><a routerLink="/create-product">Añadir Producto</a></li>
     <li class="comments"><a href="#">Comments</a></li>
     <li class="users"><a href="#">Editar Perfil</a></li>
   </ul>
