--- a/frontend/src/app/components/views/private/userProfile/userProfile.component.html
+++ b/frontend/src/app/components/views/private/userProfile/userProfile.component.html
@@ -1,12 +1,4 @@
-<nav role="navigation">
-  <ul class="main">
-    <li class="dashboard"><a href="#">Dashboard</a></li>
-    <li class="edit"><a href="#">Mis Productos</a></li>
-    <li class="write"><a href="#">Añadir Producto</a></li>
-    <li class="comments"><a href="#">Comments</a></li>
-    <li class="users"><a href="#">Editar Perfil</a></li>
-  </ul>
-</nav>
+<dashboardNavbarComponent></dashboardNavbarComponent>
 
 <main role="main" *ngIf="data">
   <section class="panel important">
