--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,3 +3,5 @@
 <div class="bodyComponents" style="margin-top: 56px;">
   <router-outlet></router-outlet>
 </div>
+
+<footerComponent></footerComponent>
