effectos visuales (animate.css)

--- a/frontend/src/app/components/views/private/createProduct/createProduct.component.html
+++ b/frontend/src/app/components/views/private/createProduct/createProduct.component.html
@@ -1,5 +1,5 @@
 <dashboardNavbarComponent></dashboardNavbarComponent>
-<main role="main">
+<main role="main" class="animate__animated animate__fadeIn">
 
   <h1>Products</h1>
   <section class="panel important">
