--- a/frontend/src/app/components/views/private/userProfile/userProfile.component.html
+++ b/frontend/src/app/components/views/private/userProfile/userProfile.component.html
@@ -1,6 +1,6 @@
 <dashboardNavbarComponent></dashboardNavbarComponent>
 
-<main role="main" *ngIf="data">
+<main role="main" *ngIf="data" class="animate__animated animate__fadeIn">
   <section class="panel important">
     <h2>Bienvenido {{this.user.name}}</h2>
     <ul>
