--- a/frontend/src/app/components/views/private/userProducts/userProducts.component.html
+++ b/frontend/src/app/components/views/private/userProducts/userProducts.component.html
@@ -1,7 +1,7 @@
 <div>
   <dashboardNavbarComponent></dashboardNavbarComponent>
 
-  <main role="main">
+  <main role="main" class="animate__animated animate__fadeIn">
 
     <h1>Products</h1>
     <section class="panel important">
