--- a/frontend/src/app/components/views/public/home/home.component.html
+++ b/frontend/src/app/components/views/public/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div id="hero">
-    <div id="hero-intro">
+    <div id="hero-intro" class="animate__animated animate__fadeInLeft">
       <div id="hero-text">
         <h1>Compra y vende lo que quieras, cuando quieras.</h1>
         <p>Aliquam rhoncus pretium dolor volutpat lectus odio non tellus neque. Aliquet et purus nibh bibendum integer etiam in enim nisi.</p>
@@ -23,7 +23,7 @@
         </div>
       </div>
     </div>
-    <div id="hero-visual">
+    <div id="hero-visual" class="animate__animated animate__fadeInRight">
       <div id="hero-img">
         <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/iPhone-15.png" alt="iPhone 15 display.">
       </div>
