--- a/frontend/src/app/components/views/public/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/views/public/marketplace/marketplace.component.html
@@ -5,12 +5,12 @@
   <h1>Products</h1>
 
   <!-- <button class="addButton" [routerLink]="['/addproduct']">+</button> -->
- 
+  <div class="animate__animated animate__fadeIn">asdasd</div>
   <div class="generalDiv">
     <div class="divContentBox">
       <div class="container">
         <div class="row">
-          <div class="col-md-4" *ngFor="let product of products">
+          <div class="col-md-4 animate__animated animate__zoomIn" *ngFor="let product of products">
             <div class="thumb-wrapper">
               <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
               <div class="img-box"> 
