--- a/frontend/src/app/components/views/private/userProfile/userProfile.component.html
+++ b/frontend/src/app/components/views/private/userProfile/userProfile.component.html
@@ -1,5 +1,5 @@
 <dashboardNavbarComponent></dashboardNavbarComponent>
-
+<img class="wave" src="../../../../../assets/img/wave3.png">
 <main role="main" *ngIf="data" class="animate__animated animate__fadeIn">
   <section class="panel important">
     <h2>Bienvenido {{this.user.name}}</h2>
