--- a/frontend/src/app/components/views/public/login/login.component.html
+++ b/frontend/src/app/components/views/public/login/login.component.html
@@ -1,11 +1,11 @@
 <img class="wave" src="../../../../../assets/img/wave.png">
 <div class="container">
   <div class="img">
-    <img src="https://raw.githubusercontent.com/sefyudem/Responsive-Login-Form/master/img/bg.svg">
+    <img src="../../../../../assets/svg/mobile-login.svg">
   </div>
   <div class="login-content">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit(); loginForm.reset();" method="post">
-      <img src="https://raw.githubusercontent.com/sefyudem/Responsive-Login-Form/master/img/avatar.svg">
+      <img src="../../../../../assets/svg/profile-pic.svg">
       <h2 class="title">Inicia sesión</h2>
              <div class="input-div one">
                 <div class="i">
