--- a/frontend/src/app/components/views/public/login/login.component.scss
+++ b/frontend/src/app/components/views/public/login/login.component.scss
@@ -17,6 +17,14 @@ body{
 	z-index: -1;
 }
 
+.wave2{
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	height: 100%;
+	z-index: -1;
+}
+
 .container{
     width: 100vw;
     height: 100vh;
