--- a/frontend/src/assets/css/generics.css
+++ b/frontend/src/assets/css/generics.css
@@ -54,6 +54,14 @@ body {
   text-transform: uppercase;
 }
 
+.wave{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	z-index: -1;
+}
+
 
 /* TOOLS */
 
