--- a/frontend/src/app/components/views/public/register/register.component.html
+++ b/frontend/src/app/components/views/public/register/register.component.html
@@ -1,3 +1,5 @@
+<img class="wave" src="../assets/img/wave3.png">
+
 <section class="container my-5">
 
   <div class="row pt-4 mt-lg-3 pb-5 mb-lg-4 mb-xl-5" id="form-elements">
