--- a/frontend/src/app/components/views/public/marketplace/marketplace.component.css
+++ b/frontend/src/app/components/views/public/marketplace/marketplace.component.css
@@ -38,12 +38,12 @@
 	margin-bottom: 5px;
 }
  .thumb-content .btn {
-	color: #7ac400;
+	color: #41BC91;
 	font-size: 11px;
 	text-transform: uppercase;
 	font-weight: bold;
 	background: none;
-	border: 1px solid #7ac400;
+	border: 1px solid #41BC91;
 	padding: 6px 14px;
 	margin-top: 5px;
 	line-height: 16px;
@@ -51,7 +51,7 @@
 }
  .thumb-content .btn:hover,  .thumb-content .btn:focus {
 	color: #fff;
-	background: #7ac400;
+	background: #41BC91;
 	box-shadow: none;
 }
  .thumb-content .btn i {
@@ -70,13 +70,13 @@
 -control-prev, -control-next {
 	height: 44px;
 	width: 40px;
-	background: #7ac400;	
+	background: #41BC91;	
 	margin: auto 0;
 	border-radius: 4px;
 	opacity: 0.8;
 }
 -control-prev:hover, -control-next:hover {
-	background: #78bf00;
+	background: #41BC91;
 	opacity: 1;
 }
 -control-prev i, -control-next i {
