--- a/frontend/src/app/components/views/public/productInfo/productInfo.component.css
+++ b/frontend/src/app/components/views/public/productInfo/productInfo.component.css
@@ -1,10 +1,10 @@
 .btn {
-	color: #7ac400;
+	color: #41BC91;
 	font-size: 11px;
 	text-transform: uppercase;
 	font-weight: bold;
 	background: none;
-	border: 1px solid #7ac400;
+	border: 1px solid #41BC91;
 	padding: 6px 14px;
 	margin-top: 5px;
 	line-height: 16px;
@@ -12,7 +12,7 @@
 }
 btn:hover, .btn:focus {
 	color: #fff;
-	background: #7ac400;
+	background: #41BC91;
 	box-shadow: none;
 }
 .btn i {
@@ -155,7 +155,7 @@ img {
   background: #ff9f1a; }
 
 .green {
-  background: #85ad00; }
+  background: #41BC91; }
 
 .blue {
   background: #0076ad; }
