--- a/frontend/src/app/components/views/public/productSupport/productSupport.component.html
+++ b/frontend/src/app/components/views/public/productSupport/productSupport.component.html
@@ -13,7 +13,7 @@
           <input formControlName="mail" [(ngModel)]="this.supportSearch.mail" type="text" id="mail" name="mail" class="form-control form-control-lg" required="" placeholder="" maxlength="60">
         </div>
         <div class="col-sm-6 mb-4">
-          <label for="refProduct" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-person-fill me-2"></i>Nombre o referéncia del producto</label>
+          <label for="refProduct" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-person-fill me-2"></i>Nombre o referencia del producto</label>
           <input formControlName="refProduct" [(ngModel)]="this.supportSearch.refProduct" type="text" id="refProduct" name="refProduct" class="form-control form-control-lg" required="" placeholder="" maxlength="60">
         </div>
         <div class="col-sm-6 mb-4">
